# ainby

./: .gitmodules  CMakeLists.txt
libs/: CMakeLists.txt
libs/Fushigi.Bfres/: Fushigi_Bfres_Common_Enum.hpp  Fushigi_Bfres_Common_IResData.hpp  Fushigi_Bfres_Common_ResDict.hpp  Fushigi_Bfres_Common_Structs.hpp  Fushigi_Bfres_Texture_AstcFile.cpp  Fushigi_Bfres_Texture_AstcFile.hpp  Fushigi_Bfres_Texture_BntxFile.cpp  Fushigi_Bfres_Texture_BntxFile.hpp  Fushigi_Bfres_Texture_BntxTexture.cpp  Fushigi_Bfres_Texture_BntxTexture.hpp  Fushigi_Bfres_Texture_Swizzling_TegraX1Swizzle.cpp  Fushigi_Bfres_Texture_Swizzling_TegraX1Swizzle.hpp  README.md
src/: CMakeLists.txt  ainby.cpp  ainby.hpp  file_index_cache.cpp  file_index_cache.hpp  main.cpp  project_config.cpp  project_config.hpp  style.hpp
src/ainb_editor/: ainb_editor.cpp
src/file_formats/: zstd.cpp  zstd.hpp
src/ui/: file_index_cache_browser.cpp  file_index_cache_browser.hpp  pack_browser.cpp  pack_browser.hpp  totk_map_2d_view.cpp  totk_map_2d_view.hpp
